tests/algorithms/x/Clojure/file_transfer/tests/test_send_file.error
run: exit status 1
Syntax error (IllegalArgumentException) compiling fn* at (/workspace/mochi/tests/algorithms/x/Clojure/file_transfer/tests/test_send_file.clj:98:1).
Cannot assign to non-mutable: send_file_sock

Full report at:
/tmp/clojure-15623958164292602778.edn
